--- a/Libro.tex
+++ b/Libro.tex
@@ -223,79 +223,20 @@ Il cervello integra stimoli ambientali e predisposizioni biologiche/genetiche (c
 
 Premere un pulsante è un operazione semplice, molto soggetta ad automatismi e, che rendono questo esperimento non risolutivo sulla domanda del libero arbitrio. Potete trovare questo esperimento e molti altri all'interno della serie Mind Field\endnote{\raggedright\url{https://www.youtube.com/watch?v=lmI7NnMqwLQ}}.
 
-
-
-
-
-
-
-
-
-Generalizzando, noi agiamo e successivamente giustifichiamo il nostro agire, come se l'avessimo
-scelto noi. Questo fenomeno è stato osservato anche in un esperimento che coinvolgeva un bar dove principalmente si
-vendevano bibite gassate. Cambiando la disposizione dei prodotti e dell'arredamento in modo da
-favorire il consumo di acqua, si notò che le vendite aumentarono. Così, è stato chiesto alle persone come mai avessero
-scelto di comprare l'acqua che risposero: perché ne avevamo voglia. Ipotizziamo che questo sia improbabile, in quanto, prima del cambio di arredamento si preferiva comprare bibite gassate. Questo ci
-suggerisce che noi agiamo grazie ad una concomitanza di fattori tra cui quelli ambientali e poi, successivamente,
-giustifichiamo questa nostra scelta. Questo effetto può essere usato anche a nostro favore,
-infatti, se vogliamo cambiare una nostra abitudine possiamo intervenire sull'ambiente che ci
-circonda, in modo da agevolare un certo comportamento.
-Ricordiamoci che se ad esempio mettiamo dei post-it che ci ricordino di fare qualcosa, ogni due o tre giorni possiamo cambiargli di posto o cambiare frasi, altrimenti ci abitueremo alla loro vista iniziando ad ignorarli.
-per introdurre un abitudine dovrebbe essere a meno di 20 secondi da dove ti trovi
-in quel momento
-Un ostacolo importante quando si tratta di ottenere un cambiamento nella propria vita, anche se un po' controintuitivo, sono le dipendenze, come suggerisce il dottor Valerio Rosso che conduce un podcast dove affronta questi argomenti. Quando si parla di dipendenze pensiamo alle droghe, all'alcohol, al gioco d'azzardo, ma in realtà sono molte di più, come la dipendenza da smartphone, televisione o più in generale dall'intrattenimento costante, ma anche dagli zuccheri, dal non poter sbagliare, dipendenze affettive e tutto ciò verso cui compulsivamente tendiamo e a cui facciamo fatica a rinunciare. Quindi se non riesci a cambiare stile di vita potrebbe essere pigrizia, mancanza delle giuste informazioni, bassa energia, ma forse no o non solo. Quindi il primo passo è capire quali sono queste dipendenze, che cosa ci sta controllando, dove va la nostra mente quando stiamo cercando di cambiare stile di vita e, non pensate solo alle dipendenze "classiche".
-
-Un giorno, Freud si trovava alla festa di Capodanno organizzata da Jean-Martin Charcot, uno dei suoi mentori a Parigi
-durante i suoi studi sull'ipnosi. Charcot, per dimostrare la sua abilità ipnotica, ipnotizza un uomo e gli ordina di
-aprire l'ombrello al centro della sala quando scocca la mezzanotte. Freud, incuriosito, segue l'uomo e gli chiede il
-motivo dell'apertura dell'ombrello. L'uomo risponde che lo sta facendo perché piove, ma Freud gli fa notare che sono al
-chiuso. L'uomo, incapace di rispondere adeguatamente, continua a cercare una spiegazione, dicendo che ne aveva voglia,
-senza rendersi conto di essere stato ipnotizzato e di seguire degli ordini. Freud riflette su come questa situazione
-possa riflettersi nella vita di tutti i giorni. Si chiede se i suoi problemi derivino dal fatto di essere stato
-condizionato dalla cultura familiare e sociale, senza rendersene conto. Capisce che molte volte, quando cerchiamo di
-giustificare le nostre azioni, stiamo razionalizzando delle difese psicologiche, piuttosto che
-comprendere le nostre motivazioni che stanno alla base. Questo porta Freud a interrogarsi sul ruolo dell'ipnosi nella
-formazione dei comportamenti umani e nel processo decisionale.
+Generalizzando, noi agiamo e successivamente giustifichiamo il nostro agire, come se l'avessimo scelto noi. Questo fenomeno è stato osservato anche in un esperimento che coinvolgeva un bar dove principalmente si vendevano bibite gassate. Cambiando la disposizione dei prodotti e dell'arredamento in modo da
+favorire il consumo di acqua, si notò che le vendite aumentarono. Così, è stato chiesto alle persone come mai avessero scelto di comprare l'acqua e risposero: perché ne avevamo voglia. Ipotizzarono che questo fosse improbabile, in quanto, prima del cambio di arredamento, le persone mediamente preferivano comprare bibite gassate. 
 
 Quindi dobbiamo arrenderci al destino? Qualsiasi nostro sforzo è inutile perché tutto è già stato scritto?
-Fortunatamente no, altrimenti dovremmo aprire tutte le carceri e lasciare a piede libero gli assassini in quanto non
-avrebbero colpa. Da una prospettiva più deterministica, alcune interpretazioni potrebbero suggerire che sia effettivamente così. Alcuni studi hanno individuato correlazioni tra tratti antisociali e anomalie in specifiche aree cerebrali (es. amigdala, corteccia prefrontale), suggerendo una componente biologica, ma non esclusivamente genetica o deterministica. 
-Alcune persone potrebbero compiere omicidi di massa a
-seguito di un tumore al cervello, anch'esso, non deciso e voluto da loro. Alcuni ricercatori,
-nelle carceri, dividendo i carcerati per crimine commesso, hanno notato che i vari gruppi presentavano particolari geni
-meno frequenti negli altri gruppi. Emblematico il caso del giudice Hannover che ha dato un fortissimo sconto della pena
-per lo stupro di una ragazza. La motivazione? Lo stupratore era sardo. "Si deve tenere conto delle
-particolari impronte culturali ed etniche dell'imputato. È un sardo. Il quadro del ruolo dell'uomo e della donna,
-esistente nella sua patria, non può certo valere come scusante ne deve essere tenuto in considerazione come attenuante".
-\endnote{\raggedright\url{https://www.lagazzettadelmezzogiorno.it/news/home/65714/germania-torturo-una-ragazza-sconto-di-pena-e-sardo.html}}
+Fortunatamente no, altrimenti dovremmo liberare gli assassini in quanto non avrebbero colpa. Da una prospettiva più deterministica, alcune interpretazioni potrebbero suggerire che sia effettivamente così. Alcuni studi hanno individuato correlazioni tra tratti antisociali e anomalie in specifiche aree cerebrali e genetiche, suggerendo una componente biologica, ma non esclusivamente genetica o deterministica. 
+Alcune persone potrebbero compiere omicidi di massa a seguito di un tumore al cervello, anch'esso. Il caso più noto fu quello di Charles Whitman.
 
-Noi abbiamo la scelta, ma ci comportiamo con schemi seppur complessi, potenzialmente prevedibili, se potessimo leggere
-nel cervello. Riprendendo l'esempio della strada per andare al lavoro, i nostri schemi mentali,
-diventano automatici dopo un'elaborazione della mente conscia, più
-l'influenza della genetica e di altri schemi mentali pregressi, più la casualità degli eventi. Tra questi vari punti abbiamo l'elaborazione della mente conscia su cui possiamo avere un minimo di manovra. Un minimo perché la nostra mente conscia è influenzata dalla mente inconscia, schemi mentali, bias
-cognitivi, preconcetti ecc… Quindi non va visto come un destino scritto nelle stelle. È qualcosa di più locale, è la
-nostra mente che ci condiziona, che ci da una “tendenza” seppur molto forte a comportarci e pensare in un certo modo.
-Uno studio del 2019 (UNSW)\endnote{\raggedright\url{https://www.nature.com/articles/s41598-019-39813-y}}, con risonanza magnetica, ha osservato che modelli di attività cerebrale predittiva delle scelte emergono prima della consapevolezza, suggerendo una predisposizione inconscia, ma l’accuratezza non è mai stata del 100\%.
-Questo significa che qualcuno tra i partecipanti ha preso
-una decisione a livello inconscio e in quei 200 millisecondi abbia cambiato la
-scelta\endnote{\raggedright\url{https://www.focus.it/comportamento/psicologia/scelte-visibili-cervello-prima-volonta}}.
+Fattori culturali e biologici quindi ci forniscono una “tendenza” a comportarci e pensare in un certo modo. In uno studio del 2019 (UNSW)\endnote{\raggedright\url{https://www.nature.com/articles/s41598-019-39813-y}}, con risonanza magnetica, sono stati osservati modelli di attività cerebrale predittiva delle scelte emergere prima della consapevolezza, suggerendo una predisposizione inconscia, ma l’accuratezza non è mai stata del 100\%.
+Questo significa tra i partecipanti, qualcuno in quei 200 millisecondi sia riuscito ad esercitare un 'veto consapevole' e inibire l'impulso prima di agire\endnote{\raggedright\url{https://www.focus.it/comportamento/psicologia/scelte-visibili-cervello-prima-volonta}}.
 
-Se diventi consapevole di avere un problema, o che ti stai auto sabotando,
-convincendoti di qualcosa solo perché è più comodo, o di non star facendo la cosa giusta, allora puoi intervenire.
-Un po' come quando notato che ora stai assumendo una certa posizione. Ora che ne sai consapevole puoi
-cambiarla. È anche vero che diventerai consapevole o meno di qualcosa, influenzato dai tuoi schemi mentali,
-però parlando con qualcuno, magari in un momento difficile, facendo associazioni libere di pensieri, scrittura
-creativa, meditazione ecc… puoi cercare di allentare la presa dei tuoi schemi mentali e,
-lasciare che ci sia una fuoriuscita e, che affiori anche alla consapevolezza di alcuni tuoi lati.
+Se diventiamo consapevoli dei nostri problemi o schemi mentali, potremmo riuscire a intervenire ed evitare di agirli.
+È anche vero che potremmo diventare consapevoli o meno sempre attraverso la nostra mente, influenzata da schemi mentali, quindi potremmo trovarci ancora nel determinismo.
 
-La cultura occidentale, teorizzata poi da Freud con il concetto di "io" presuppone che,
-tolte tutte le nostre maschere troveremo il nostro vero io. Mentre alcune branche della nuova psicologia non vedono
-l'io dietro tutte le maschere, ma l'io come tutte quelle maschere. È difficile trovare un ‘io’ definitivo, perché la vita e, le sue
-situazioni, ti potrebbero mostrare un io diverso da ciò che credevi e, successivamente, definito questo tuo nuovo io, potrebbe venire
-contraddetto anche quest'ultimo dalle nuove concomitanze. L'io, più che una caratteristica fissa, può essere inteso come un processo in continuo divenire, un'esperienza che si manifesta e si ridefinisce in ogni momento, fortemente legata al contesto e all'interazione con il mondo, in un flusso costante. Il classico panta rei, tutto scorre, non ci si può immergere due volte nello stesso fiume, perché quel fiume
-ora si è spostato più a valle.
-
-Questa complessità della nostra rete neurale implica che, anche a fronte di situazioni apparentemente simili, le risposte possano variare leggermente. È fondamentale tenere conto di questa complessità, pur mantenendo un quadro di responsabilità indispensabile per la coesione sociale. In sintesi, sebbene la questione del libero arbitrio resti profondamente dibattuta e alcuni studi ne mettano in discussione l'esistenza nel senso più assoluto, la nostra esperienza e la necessità di una società organizzata ci impongono di agire e di assumerci le responsabilità come se esso fosse pienamente operativo.
+In sintesi, sebbene la questione del libero arbitrio resti profondamente dibattuta e, alcuni studi ne mettano in discussione l'esistenza, la nostra esperienza e la necessità di una società organizzata ci impongono di agire e di assumerci le responsabilità delle nostre azioni.
 
 \needspace{4cm}
 \begin{mdframed}[linewidth=1pt]
@@ -309,22 +250,16 @@ Esperimento del piccolo Albert
   \end{minipage}
 \end{wrapfigure}
 
-Jhon Broadus Watson, nato nel 1878, è conosciuto come il padre del comportamentismo. Voleva dimostrare con un bambino i
-cui pattern in risposta agli stimoli sono piuttosto semplici rispetto a un adulto, che si possono indurre, attraverso
-il condizionamento ambientale, alcune emozioni come la paura. Albert era un neonato e ha circa 9 mesi quando
-affronta il suo primo test. Uno sperimentatore distrae il bambino, mentre un altro colpisce una sbarra di ferro con un
-martello. I primi battiti sulla sbarra provocarono un sussulto, mentre un pianto evidente iniziò solo dopo diverse ripetizioni dell’associazione rumore-topo. Dopo pochi giorni vengono mostrati, ad Albert, un topo bianco, un coniglio, un cane, una scimmia,
-maschere, della bambagia, un giornale infuocato e molto altro. Durante i test preliminari, Albert mostrò curiosità verso la carta infuocata, suggerendo che non avesse ancora associato il fuoco a dolore o pericolo, almeno secondo quanto riferito dai ricercatori. L'esperimento
-cercherà di instillare la paura in Albert alla vista di qualcosa che precedentemente non lo spaventava. I ricercatori
-hanno deciso di usare il topo bianco, che sembrava incuriosire Albert. Ogni volta che il bambino provava ad
-avvicinarsi al topo, uno sperimentatore colpiva una barra di ferro con un martello. Le prime volte il bambino
-sussultava, ma senza piangere. Le volte successive, però, iniziò a piangere. Dopo una settimana Albert era terrorizzato
-alla vista del topo e cercava di scappare in lacrime. Dopo il condizionamento, la paura si generalizzò ad altri oggetti a pelo simile, come pellicce, conigli, mantelli e la maschera con barba bianca (simile a Babbo Natale). Watson e Rayner discussero ipoteticamente la possibilità di una desensibilizzazione, ma in pratica non la realizzarono, poiché Albert e la madre lasciarono l’ospedale subito dopo. 
-
-Sono disponibili su YouTube brevi filmati d’epoca dell’esperimento, ma non si tratta dei video completi del controverso esperimento\endnote{\raggedright\url{https://www.youtube.com/watch?v=FMnhyGozLyE}} condotto nel 1920 dove l'etica sulla ricerca era molto meno scrupolosa rispetto a quella odierna. 
-Nel loro report del 1920, Watson e Rayner osservarono che il danno al bambino sembrava “relativamente lieve”, ma non presentarono dati oggettivi sul livello di stress effettivo per il bambino. Il bambino e la madre lasciarono l'ospedale subito dopo, ma purtroppo Albert morì all'età di sei anni di
-idrocefalia.\endnote{\raggedright\url{https://www.stateofmind.it/2016/01/il-piccolo-albert-esperimento-psicologia/}}
+John Watson nel 1920 indusse in un neonato di nome Albert la fobia per i ratti bianchi, colpendo ripetutamente una barra d'acciaio con un martello, provocando un forte rumore improvviso, ogni volta che il bambino tentava di toccare l'animale. Il trauma portò una generalizzazione tale per cui Albert iniziò a mostrare terrore non solo verso il ratto, ma verso qualsiasi oggetto bianco e peloso. Watson e il collega Rayner discussero la possibilità di una desensibilizzazione, ma non la realizzarono, poiché il bambino e la madre lasciarono l'ospedale subito dopo, ma purtroppo Albert morì all'età di sei anni di
+idrocefalia.\endnote{\raggedright\url{https://www.stateofmind.it/2016/01/il-piccolo-albert-esperimento-psicologia/}}. Watson dimostrò come le emozioni umane possono essere condizionate, nonostante il controverso esperimento sollevò numberosi problemi etici, du cui possiamo ancora trovare brevi filmati\endnote{\raggedright\url{https://www.youtube.com/watch?v=FMnhyGozLyE}}. 
 \end{mdframed}
+
+
+
+
+
+
+
 
 \subsection{Metodo Scientifico}
 Siccome ciò che sappiamo sul mondo che ci circonda, su noi stessi, sulle idee che ci siamo fatti, passa attraverso
@@ -1618,7 +1553,7 @@ Nell'odio può manifestarsi il meccanismo della proiezione, attraverso cui si at
 
 Sii il cambiamento che vuoi vedere nel mondo - Mahatma Gandhi
 
-Cambiare sé stessi richiede tempo e fatica. Per questo, talvolta, può essere più efficace modificare il contesto in cui ci muoviamo, creando ambienti che facilitino i comportamenti desiderati.
+Cambiare sé stessi richiede tempo e fatica. Per questo, talvolta, può essere più efficace modificare il contesto in cui ci muoviamo, creando ambienti che facilitino i comportamenti desiderati. Se vuoi creare un'abitudine, fai in modo che sia a portata di mano, a non più di 20 secondi da te. Possiamo anhe mettere dei post-it che ci ricordino di fare qualcosa e, ogni due o tre giorni cambiarli di posto, per non abituarci. 
 
 Non è corretto dire: “lui mi fa arrabbiare”. La rabbia è sua e te la dà? O è tua? Le azioni degli altri possono essere fattori scatenanti, ma non sono necessariamente la causa dei nostri sentimenti. Erano già dentro di noi. A volte troviamo inconsapevolmente un pretesto esterno per farle uscire. Quindi sarebbe più corretto dire “Sono arrabbiato con te”, invece di “Mi hai fatto arrabbiare”. Anche se è oggettivamente colpa dell'altra persona, possiamo assumerci la responsabilità delle nostre emozioni. Anche se tronchiamo i rapporti con la persona che ci ha fatto arrabbiare, potremmo avere ancora quel nervo scoperto, quei pulsanti e quelle corde che ci attivano se toccate e, prima o poi qualcun'altro potrebbe usarle. 
 Posso anche scegliere di non uscire questa sera per non incontrare quella persona perchè oggi non ho voglia di irritarmi, ma se sono consapevole che quel nervo scoperto è il mio ed è mia responsabilità gestirlo, non è un evitamento, ma oggi non abbiamo voglia di gestirlo.
@@ -2095,141 +2030,7 @@ Anche fisicamente, dove sappiamo che il corpo ha un declino con l'avanzare degli
 sovrastimiamo la gravità. Come accadde per Edoardo
 Vaghetto\endnote{\raggedright\url{https://www.lastampa.it/milano/2018/04/07/news/storia-di-edoardo-l-uomo-che-con-le-maratone-sconfigge-la-vecchiaia-1.34002313/}
 }, che ha iniziato a correre per la prima volta a 60 anni, perché voleva fare la maratona di New York! E ci è riuscito
-diverse volte! All'età di 80 anni riesce a correre anche per 100km! Anche il metabolismo, non
-sembra cambiare così tanto con l'età secondo uno studio della Duke
-University\endnote{\raggedright\url{https://www.science.org/doi/10.1126/science.abe5017}} che ha analizza le calorie medie bruciate
-quotidianamente da oltre 6.600 persone di 29 Paesi in tutto il mondo, con un'età variabile da appena 8 giorni a 95
-anni. I ricercatori hanno osservato che il metabolismo è molto veloce fino ai 20 anni e resta piuttosto stabile fino ai 60. 
-Il vero declino è stato riscontrato a 90 anni, dove il metabolismo è del 26\% più basso rispetto alla mezza età. Negli anni cambia quindi più lo stile di vita che il metabolismo.
-
-Le calorie diminuiscono con l'età in quanto diventano meno efficienti nel consumo di energia. Inoltre, con l'età si tende a perdere massa muscolare (tessuto metabolicamente molto attivo nel bruciare calorie). Di seguito possiamo vedere come può cambiare il peso in uomini e donne attivi o con sarcopenia (naturale processo biologico che porta alla progressiva perdita muscolare). Notiamo come in persone che allenano la massa muscolare, su valori medi, il peso tende a restare più stabile, mentre chi non si allena ha una perdita di muscoli e un aumento di grasso con l'età.
-
-\begin{tikzpicture}
-    \begin{axis}[
-        title={\textbf{Evoluzione Corporea: Confronto Uomo vs Donna}},
-        width=\linewidth,
-        height=10cm,
-        xlabel={Età (anni)},
-        ylabel={Peso (kg)},
-        xmin=18, xmax=82,
-        ymin=0, ymax=95,
-        xtick={20, 40, 60, 80},
-        grid=major,
-        legend columns=2,
-        grid style={dotted, gray!50},
-        legend style={
-            draw=none,
-            at={(0.5,-0.15)},
-            anchor=north,
-            legend columns=3,
-            font=\tiny,
-            column sep=5pt
-        }
-    ]
-
-    \addplot[color=blue, line width=1.5pt, forget plot] 
-        coordinates {(20,75) (40,78) (60,77) (80,74)};
-    
-    \addplot[color=blue, dashed, line width=1pt, forget plot] 
-        coordinates {(20,63.75) (40,68.6) (60,66.2) (80,62.2)};
-    
-    \addplot[color=blue, dotted, line width=1pt, forget plot] 
-        coordinates {(20,11.25) (40,9.4) (60,10.8) (80,11.8)};
-
-    \addplot[color=blue!50, line width=1.5pt, forget plot] 
-        coordinates {(20,75) (40,82) (60,80) (80,70)};
-    
-    \addplot[color=blue!50, dashed, line width=1pt, forget plot] 
-        coordinates {(20,63.75) (40,61.5) (60,56.0) (80,49.0)};
-    
-    \addplot[color=blue!50, dotted, line width=1pt, forget plot] 
-        coordinates {(20,11.25) (40,20.5) (60,24.0) (80,21.0)};
-
-    \addplot[color=red, line width=1.5pt, forget plot] 
-        coordinates {(20,60) (40,62) (60,61) (80,59)};
-    
-    \addplot[color=red, dashed, line width=1pt, forget plot] 
-        coordinates {(20,46.8) (40,49.6) (60,47.6) (80,44.8)};
-    
-    \addplot[color=red, dotted, line width=1pt, forget plot] 
-        coordinates {(20,13.2) (40,12.4) (60,13.4) (80,14.2)};
-
-    \addplot[color=red!50, line width=1.5pt, forget plot] 
-        coordinates {(20,60) (40,66) (60,68) (80,56)};
-    
-    \addplot[color=red!50, dashed, line width=1pt, forget plot] 
-        coordinates {(20,46.8) (40,44.9) (60,42.2) (80,36.4)};
-    
-    \addplot[color=red!50, dotted, line width=1pt, forget plot] 
-        coordinates {(20,13.2) (40,21.1) (60,25.8) (80,19.6)};
-
-    \addlegendimage{blue, line width=1.5pt}
-    \addlegendentry{Uomini attivi}
-
-    \addlegendimage{red, line width=1.5pt}
-    \addlegendentry{donne attive}
-
-    \addlegendimage{blue!40, line width=1.5pt}
-    \addlegendentry{Uomini sarcopenici}
-
-    \addlegendimage{red!40, line width=1.5pt}
-    \addlegendentry{Donne sarcopeniche}
-
-    \addlegendimage{black, line width=1.5pt}
-    \addlegendentry{Peso totale}
-
-    \addlegendimage{black, dotted}
-    \addlegendentry{Peso massa grassa}
-
-    \addlegendimage{black, dashed}
-    \addlegendentry{Peso massa magra}
-
-    \end{axis}
-\end{tikzpicture}
-
-Qui di seguito possiamo vedere qual è l'introito calorico mediamente necessario a mantenere un corpo sarcopenico rispetto a uno allenato. Dopo i 40 anni, con l'inizio della sarcopenia, è inoltre importante aumentare la quota proteica.
-
-\begin{tikzpicture}
-    \begin{axis}[
-        title={\textbf{Evoluzione del Fabbisogno Calorico (TDEE) con l'Età}},
-        xlabel={Età (anni)},
-        ylabel={Kcal Giornaliere},
-        xmin=20, xmax=85,
-        ymin=1200, ymax=3000,
-        xtick={20, 40, 60, 80},
-        ytick={1200, 1500, 1800, 2100, 2400, 2700, 3000},
-        legend style={
-            draw=none,
-            at={(0.5,-0.18)},
-            anchor=north, 
-            legend columns=2,
-            /tikz/every even column/.append style={column sep=0.5cm}
-        },
-        width=\linewidth,      
-        height=8cm,  
-        grid style={dotted, gray!50}
-    ]
-
-    \addplot[color=blue!80!black, mark=square*, solid]
-        coordinates {(20,2650)(40,2850)(60,2650)(80,2350)};
-    \addlegendentry{Uomo attivo}
-
-    \addplot[color=blue!60!white, mark=square, dashed]
-        coordinates {(20,2650)(40,2400)(60,2050)(80,1650)};
-    \addlegendentry{Uomo Sarcopenico}
-
-    \addplot[color=red!80!black, mark=*, solid]
-        coordinates {(20,2050)(40,2200)(60,2050)(80,1850)};
-    \addlegendentry{Donna attiva}
-
-    \addplot[color=red!60!white, mark=o, dashed]
-        coordinates {(20,2050)(40,1850)(60,1600)(80,1350)};
-    \addlegendentry{Donna Sarcopenica}
-
-    \end{axis}
-\end{tikzpicture}
-
-Va precisato che entrambi i grafici sono stati realizzati da me, deducendo le informazioni da alcune ricerche\endnote{\raggedright\url{https://www.science.org/doi/10.1126/science.abe5017}} \endnote{\raggedright\url{https://pmc.ncbi.nlm.nih.gov/articles/PMC3874224/}} \endnote{\raggedright\url{https://academic.oup.com/ije/article/49/3/1007/5810163}}
+diverse volte! All'età di 80 anni riesce a correre anche per 100km!
 \end{mdframed}
 
 \clearpage
@@ -2854,6 +2655,187 @@ Essendo a intervalli un esempio potrebbe essere: 30 sec di corsa veloce seguiti 
 Allenamenti in Zona 2, ovvero a circa il 60–75\% della frequenza cardiaca massima, che potete monitorare con uno smartwatch. Se non avete uno smartwatch potete fare esercizio respirando solo con il naso e mai con la bocca. Questi allenamento comprendono esercizi come: camminata veloce, bici leggera, jogging tranquillo per 45–90 min.
 
 Entrambi i tipi di allenamento sono efficaci per la perdita di peso. L'HIIT offre risultati rapidi ed è efficiente in termini di tempo, mentre l'allenamento in Zona 2 è meno stressante e può essere sostenuto per periodi più lunghi.
+
+\paragraph{Dove impieghiamo le nostre calorie?}
+
+Osserviamo il seguente grafico: l'BMR (metabolismo basale) è l'energia che il corpo brucia per mantenere le funzioni vitali (respirazione, circolazione, attività cerebrale), rappresenta il grosso del nostro dispendio calorico. Successivamente troviamo il NEAT che sono le attività non associata all'esercizio fisico, le normali attività quotidiane, come fare le scale o spostarsi a piedi. Seguito dal TEF, lee calorie impiegate nella digestione. Solo alla fine troviamo l'EAT le calorie bruciate dallo sport vero e proprio.
+
+\begin{wrapfigure}{l}{0.3\textwidth}
+\centering
+\begin{tikzpicture}[scale=0.8]
+\begin{axis}[
+    ybar stacked,
+    bar width=2cm,
+    width=3.5cm,
+    height=10cm,
+    ymin=0, ymax=100,
+    ytick={0, 10, ..., 100},
+    yticklabel={\pgfmathprintnumber{\tick}\%},
+    xtick=\empty,
+    axis x line=bottom,
+    axis y line=left,
+    enlarge x limits=0.2,
+    nodes near coords,
+    every node near coord/.append style={
+        anchor=center, 
+        font=\sffamily\small\bfseries,
+    },
+    point meta=explicit symbolic 
+]
+
+\addplot[fill=cyan!70!blue, draw=none] coordinates {(1,70) [BMR]};
+\addplot[fill=cyan!20, draw=none] coordinates {(1,15) [NEAT]};
+\addplot[fill=orange, draw=none] coordinates {(1,10) [TEF]};
+\addplot[fill=blue!40!gray, draw=none] coordinates {(1,5) [EAT]};
+
+\end{axis}
+\end{tikzpicture}
+\end{wrapfigure}
+
+Per bruciare più calorie quindi, più che aumentare l'attività fisica, risulta efficace aumentare il metabolismo.
+Possiamo cambiare il metabolismo o è fissato dalla nostra genetica? Ciò che più influenza il metabolismo è la massa muscolare, sui cui possiamo intervenire.
+
+Prendiamo come esempio un uomo di 35 anni di 80 kg con uno stile di vita sedentario, il suo BMR potrebbe essere di circa 1.700 kcal/giorno.
+Se la stessa persona, tramite l'allenamento, sostituisse 10 kg di grasso con 10 kg di muscolo, porterebbe il suo BMR a circa 1.950 kcal/giorno.
+Un incremento di circa 200-300 kcal al giorno può sembrare poco, ma in una settimana sono circa 2.100 kcal, l'equivalente di un intero giorno di cibo extra senza ingrassare.
+
+Inoltre il metabolismo, non sembra cambiare così tanto con l'età. Secondo uno studio della Duke University\endnote{\raggedright\url{https://www.science.org/doi/10.1126/science.abe5017}} che ha analizzato le calorie medie bruciate quotidianamente da oltre 6.600 persone di 29 Paesi in tutto il mondo, con un'età variabile da appena 8 giorni. fino a 95 anni. I ricercatori hanno osservato che il metabolismo resta piuttosto stabile fino ai 60 anni. 
+Il vero declino è stato riscontrato a 90 anni, dove risulta del 26\% più basso rispetto alla mezza età. Negli anni cambia più lo stile di vita che il metabolismo.
+
+Il leggero calo del BMR legato all'età dipende dall'efficienza nel consumo di energia, ma soprattutto dalla perdita di massa muscolare. Di seguito possiamo vedere come può cambiare il peso in uomini e donne attivi o con sarcopenia (naturale processo biologico che porta alla progressiva perdita muscolare). Notiamo come in persone che allenano la massa muscolare, su valori medi, il peso tende a restare più stabile, mentre chi non si allena ha una perdita di muscoli e un aumento di grasso con l'età.
+
+\begin{tikzpicture}
+    \begin{axis}[
+        title={\textbf{Evoluzione Corporea: Confronto Uomo vs Donna}},
+        width=\linewidth,
+        height=10cm,
+        xlabel={Età (anni)},
+        ylabel={Peso (kg)},
+        xmin=18, xmax=82,
+        ymin=0, ymax=95,
+        xtick={20, 40, 60, 80},
+        grid=major,
+        legend columns=2,
+        grid style={dotted, gray!50},
+        legend style={
+            draw=none,
+            at={(0.5,-0.15)},
+            anchor=north,
+            legend columns=3,
+            font=\tiny,
+            column sep=5pt
+        }
+    ]
+
+    \addplot[color=blue, line width=1.5pt, forget plot] 
+        coordinates {(20,75) (40,78) (60,77) (80,74)};
+    
+    \addplot[color=blue, dashed, line width=1pt, forget plot] 
+        coordinates {(20,63.75) (40,68.6) (60,66.2) (80,62.2)};
+    
+    \addplot[color=blue, dotted, line width=1pt, forget plot] 
+        coordinates {(20,11.25) (40,9.4) (60,10.8) (80,11.8)};
+
+    \addplot[color=blue!50, line width=1.5pt, forget plot] 
+        coordinates {(20,75) (40,82) (60,80) (80,70)};
+    
+    \addplot[color=blue!50, dashed, line width=1pt, forget plot] 
+        coordinates {(20,63.75) (40,61.5) (60,56.0) (80,49.0)};
+    
+    \addplot[color=blue!50, dotted, line width=1pt, forget plot] 
+        coordinates {(20,11.25) (40,20.5) (60,24.0) (80,21.0)};
+
+    \addplot[color=red, line width=1.5pt, forget plot] 
+        coordinates {(20,60) (40,62) (60,61) (80,59)};
+    
+    \addplot[color=red, dashed, line width=1pt, forget plot] 
+        coordinates {(20,46.8) (40,49.6) (60,47.6) (80,44.8)};
+    
+    \addplot[color=red, dotted, line width=1pt, forget plot] 
+        coordinates {(20,13.2) (40,12.4) (60,13.4) (80,14.2)};
+
+    \addplot[color=red!50, line width=1.5pt, forget plot] 
+        coordinates {(20,60) (40,66) (60,68) (80,56)};
+    
+    \addplot[color=red!50, dashed, line width=1pt, forget plot] 
+        coordinates {(20,46.8) (40,44.9) (60,42.2) (80,36.4)};
+    
+    \addplot[color=red!50, dotted, line width=1pt, forget plot] 
+        coordinates {(20,13.2) (40,21.1) (60,25.8) (80,19.6)};
+
+    \addlegendimage{blue, line width=1.5pt}
+    \addlegendentry{Uomini attivi}
+
+    \addlegendimage{red, line width=1.5pt}
+    \addlegendentry{donne attive}
+
+    \addlegendimage{blue!40, line width=1.5pt}
+    \addlegendentry{Uomini sarcopenici}
+
+    \addlegendimage{red!40, line width=1.5pt}
+    \addlegendentry{Donne sarcopeniche}
+
+    \addlegendimage{black, line width=1.5pt}
+    \addlegendentry{Peso totale}
+
+    \addlegendimage{black, dotted}
+    \addlegendentry{Peso massa grassa}
+
+    \addlegendimage{black, dashed}
+    \addlegendentry{Peso massa magra}
+
+    \end{axis}
+\end{tikzpicture}
+
+Qui di seguito possiamo vedere qual è l'introito calorico mediamente necessario a mantenere un corpo sarcopenico rispetto a uno allenato. Dopo i 40 anni, con l'inizio della sarcopenia, è inoltre importante aumentare la quota proteica.
+
+\begin{tikzpicture}
+    \begin{axis}[
+        title={\textbf{Evoluzione del Fabbisogno Calorico (TDEE) con l'Età}},
+        xlabel={Età (anni)},
+        ylabel={Kcal Giornaliere},
+        xmin=20, xmax=85,
+        ymin=1200, ymax=3000,
+        xtick={20, 40, 60, 80},
+        ytick={1200, 1500, 1800, 2100, 2400, 2700, 3000},
+        legend style={
+            draw=none,
+            at={(0.5,-0.18)},
+            anchor=north, 
+            legend columns=2,
+            /tikz/every even column/.append style={column sep=0.5cm}
+        },
+        width=\linewidth,      
+        height=8cm,  
+        grid style={dotted, gray!50}
+    ]
+
+    \addplot[color=blue!80!black, mark=square*, solid]
+        coordinates {(20,2650)(40,2850)(60,2650)(80,2350)};
+    \addlegendentry{Uomo attivo}
+
+    \addplot[color=blue!60!white, mark=square, dashed]
+        coordinates {(20,2650)(40,2400)(60,2050)(80,1650)};
+    \addlegendentry{Uomo Sarcopenico}
+
+    \addplot[color=red!80!black, mark=*, solid]
+        coordinates {(20,2050)(40,2200)(60,2050)(80,1850)};
+    \addlegendentry{Donna attiva}
+
+    \addplot[color=red!60!white, mark=o, dashed]
+        coordinates {(20,2050)(40,1850)(60,1600)(80,1350)};
+    \addlegendentry{Donna Sarcopenica}
+
+    \end{axis}
+\end{tikzpicture}
+
+Va precisato che entrambi i grafici sono stati realizzati da me, deducendo le informazioni da alcune ricerche\endnote{\raggedright\url{https://www.science.org/doi/10.1126/science.abe5017}} \endnote{\raggedright\url{https://pmc.ncbi.nlm.nih.gov/articles/PMC3874224/}} \endnote{\raggedright\url{https://academic.oup.com/ije/article/49/3/1007/5810163}}
+
+Altro parametro piuttosto influente su cui possiamo lavorare è il NEAT, quindi i classici consigli, preferire le scale rispetto all'ascensore, limitare l'utilizzo dell'auto e, valutare l'utilizzo di scrivanie per lavorare in piedi.
+
+Il TEF sembra molto legato alla nostra costituzione, ma sappiamo che alcuni cibi consumano più calorie per essere processati. Le proteine hanno un costo energetico del 20\% 30\%, seguiti dai carboidrati con un 5\% 10\% e infine i grassi Grassi 0\% 3\%. Una alimentazione ricca di proteine può portare benefici, ricordano che una dieta sana deve essere bilanciata coi macronutrienti. Oltre ai macronutrienti, i cibi integrali e meno processati richiedono più energia per essere scomposti.
+
+È interessante notare come sia tutto collegato. Seppur l'allenamento (EAT) non aumenti tanto il dispendio energetico sul breve termine, lo va a aumentare sul lungo termine (BMR). Per aumentare la massa muscolare e l'BMR non basta solo l'allenamento ma anche l'alimentazione, apportando le giuste proteine che influenzano il TEF.
 
 \paragraph{Riposo}
 È importante non allenare due giorni di fila lo stesso gruppo muscolare. Una buona idea è alternare i giorni di petto e tricipite con i giorni di schiena e bicipite, oppure gli esercizi di spinta e gli esercizi di tirata.
