--- a/Libro.tex
+++ b/Libro.tex
@@ -2605,6 +2605,8 @@ Le regole minime sono:
 \item \textbf{Esecuzione}: Esegui gli esercizi con movimenti lenti e controllati. La fase di sforzo può essere più esplosiva, mentre quella di ritorno in posizione sarà più lenta.
 \end{itemize}
 
+Per prevenire infortuni lo stretching statico è poco efficace: molto meglio l'allenamento con sovraccarichi, che rinforza i tessuti e migliora la mobilità reale. È preferibile lo stretching attivo per scaldarsi, lasciando quello passivo solo per il relax post-allenamento.
+
 Molti temono l'idea di dover interrompere l'allenamento a causa di infortuni o impegni, spaventati dalla prospettiva di perdere mesi di duro lavoro. Spesso però questa paura è in gran parte infondata. La maggior parte della forza e della massa può essere riacquisita in poche settimane o in un paio di mesi di allenamento graduale e ben strutturato, anche per stop di quattro mesi.
 
 \paragraph{Dieta}
@@ -2835,7 +2837,7 @@ Altro parametro piuttosto influente su cui possiamo lavorare è il NEAT, quindi 
 
 Il TEF sembra molto legato alla nostra costituzione, ma sappiamo che alcuni cibi consumano più calorie per essere processati. Le proteine hanno un costo energetico del 20\% 30\%, seguiti dai carboidrati con un 5\% 10\% e infine i grassi Grassi 0\% 3\%. Una alimentazione ricca di proteine può portare benefici, ricordano che una dieta sana deve essere bilanciata coi macronutrienti. Oltre ai macronutrienti, i cibi integrali e meno processati richiedono più energia per essere scomposti.
 
-È interessante notare come sia tutto collegato. Seppur l'allenamento (EAT) non aumenti tanto il dispendio energetico sul breve termine, lo va a aumentare sul lungo termine (BMR). Per aumentare la massa muscolare e l'BMR non basta solo l'allenamento ma anche l'alimentazione, apportando le giuste proteine che influenzano il TEF.
+È interessante notare come sia tutto collegato. Seppur l'allenamento (EAT) non aumenti tanto il dispendio energetico sul breve termine, lo va a aumentare sul lungo termine (BMR). Per aumentare la massa muscolare e l'BMR non basta solo l'allenamento, ma anche l'alimentazione, apportando le giuste proteine che influenzano il TEF.
 
 \paragraph{Riposo}
 È importante non allenare due giorni di fila lo stesso gruppo muscolare. Una buona idea è alternare i giorni di petto e tricipite con i giorni di schiena e bicipite, oppure gli esercizi di spinta e gli esercizi di tirata.
@@ -2856,6 +2858,8 @@ Quello che funziona per me, è portare l'attenzione sulle immagini. Quando chiud
 Una tecnica è quella chiamata mental shuffle, dove si pensa ad alcune parole che iniziano con la lettera a, poi con la b, con la c e così via, senza fissarsi troppo sulle singole parole.
 
 L'esercito americano utilizza una tecnica, sviluppata da Lloyd Winter, che li aiuta ad addormentarsi anche in luoghi e situazioni difficili. Fase 1: rilassare ogni parte del proprio corpo, partendo dal viso (lingua compresa) fino alle gambe, respirando lentamente. Fase 2: ripulire la mente immaginandosi sdraiati in una canoa su un lago calmissimo, sotto il cielo blu e senza nulla intorno, oppure avvolti da un'amaca di velluto nero in una stanza completamente buia\endnote{\raggedright\url{https://www.focus.it/scienza/salute/meglio-dormire-insieme-o-da-soli}}.
+
+Un altro aiuto per aiutarci, è cercare, ad esempio su youtube, dei racconti per dormire.
 
 Può essere utile fare attività rilassanti una o due ore prima di andare a letto. Si consiglia anche di non utilizzare schermi.
 
